💄 fix bug background gradian on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html{
-  @apply bg-gradient-to-bl from-blue-900 via-indigo-500 to-purple-400
+  @apply bg-fixed bg-gradient-to-bl from-blue-900 via-indigo-500 to-purple-400
   
   /*bg-gradient-to-tr from-indigo-800 via-purple-800 to-purple-400*/
 /* bg-gradient-to-bl from-blue-900 via-indigo-500 to-purple-400 */
